<resources>
    <string name="app_name">Project10</string>
    <string name="no_data">Sorry,No Data Available…</string>
    <string name="no_data_desc">Click on Add Item to enter a new product</string>
    <string name="add">Add Item</string>
    <string name="name">Item Name:</string>
    <string name="quantity">Quantity:</string>
    <string name="price">Price:</string>
    <string name="hint_name">Enter the Name of Item</string>
    <string name="hint_price">Enter the Price of Item</string>
    <string name="unit_price">Rs</string>
    <string name="hint_quantity">Enter Quantity of Item</string>
    <string name="order">Order More</string>
    <string name="delete">Delete</string>
    <string name="sale">sale</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="save">Save</string>
    <string name="unknown_quantity">Unknown Quantity</string>
    <string name="unknown_price">Unknown Price</string>
    <string name="action_delete_all_entries">Delete All Items</string>
    <string name="editor_activity_title_new_item">Add a Item</string>
    <string name="editor_activity_title_edit_item">Edit Item</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="editor_insert_item_successful">Item saved</string>
    <string name="editor_insert_item_failed">Error with saving Item</string>
    <string name="editor_update_item_successful">Item updated</string>
    <string name="editor_update_item_failed">Error with updating Item</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_item_successful">Item deleted</string>
    <string name="editor_delete_item_failed">Error with deleting Item</string>
    <string name="delete_dialog_msg">Delete this Item?</string>
    <string name="cancel">Cancel</string>
    <string name="no_image_desc">No Image</string>
</resources>
