<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/name" />


        <EditText
            android:id="@+id/edit_item_name"
            style="@style/EditorFieldStyle"
            android:layout_weight="3"
            android:hint="@string/hint_name"
            android:inputType="textCapWords" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:paddingRight="4dp"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <Button
                android:id="@+id/decrement"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/minus"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/_0"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="25sp" />

            <Button
                android:id="@+id/increment"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                android:textSize="25sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/price" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_price"
                style="@style/EditorFieldStyle"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:hint="@string/hint_price"
                android:inputType="number" />

            <TextView
                android:id="@+id/age_units"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/unit_price" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="order"
            android:text="@string/order" />

        <Button
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />

        <Button
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="delete"
            android:text="@string/delete" />
    </LinearLayout>

    <ImageView
        android:id="@+id/image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:src="@drawable/add_image" />
</LinearLayout>